--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;700&display=swap"
       rel="stylesheet" />
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/header.css">
+    <link rel="stylesheet" href="css/title.css">
+    <link rel="stylesheet" href="css/about.css">
+    <link rel="stylesheet" href="css/skills.css">
+    <link rel="stylesheet" href="css/hobbies.css">
+    <link rel="stylesheet" href="css/experiencia.css">
+    <link rel="stylesheet" href="css/contato.css">
+    <link rel="stylesheet" href="css/footeer.css">
     <title>Italo Vieira | Portifolio</title>
   </head>
   <body>
@@ -25,6 +33,7 @@
             <li class="list-menu">
               <a href="#nome">italofernandesvm@gmail.com</a>
             </li>
+            <li class="contato"><a href="#nome">italofernandesvm@gmail.com</a></li>
           </ul>
         </nav>
       </section>
@@ -34,7 +43,7 @@
     <section class="title">
       <div class="title__div">
         <img
-          src="img/profilee.jpg"
+          src="img/profile.jpg"
           alt="Imagem de perfil"
           class="title__profile" />
         <div class="title__container" id="sobremim">
@@ -69,17 +78,10 @@
       <div class="about__container">
         <h3 class="about__title">Sobre mim</h3>
         <p class="about__paragraph">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque
-          velit velit, volutpat semper dignissim dictum, imperdiet ut lacus.
-          Quisque gravida ex a mattis pretium. Suspendisse potenti. Ut semper
-          sagittis ligula et lacinia.
+          Sou programador web em busca de oportunidades para aplicar minhas habilidades e crescer na área de desenvolvimento de software. Com conhecimentos em Java, javaScript, HTML e CSS.
         </p>
         <p class="about__paragraph">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque
-          velit velit, volutpat semper dignissim dictum, imperdiet ut lacus.
-          Quisque gravida ex a mattis pretium. Suspendisse potenti. Ut semper
-          sagittis ligula et lacinia. Aenean sit amet felis venenatis, egestas
-          metus vitae, aliquet metus.
+          Minha paixão pela programação começõu quando tinha 15 anos, comecei com java, dei uma pausa nos estudos, e retornei aos estudos em 2023 com JavaScript, React, html e css. Desde então, tenho me dedicado a aprender e aprimorar minhas habilidades técnicas, trabalhando em projetos pessoais e freelancer.
         </p>
       </div>
     </section>
@@ -200,21 +202,21 @@
       <div class="experience__container">
         <div class="experiencie__box">
           <!-- Insira a logo/captura de seu projeto/trabalho -->
-          <img class="experience__img" src="img/testprojetos.svg" />
+          <img class="experience__img" src="img/codificador.gif" />
           <div class="experience__info">
             <h2 class="experience__title">Decodificador de texto</h2>
             <h3 class="experience__text">Challenge Alura Codificador</h3>
             <div class="experience__description">
               <!-- Insira a link para demonstração do projeto no Github e/ou GithubPages -->
               <span class="experience__repo"
-                ><a href=""
+                ><a href="https://github.com/italofvm/Codificador-ChallengeOneT5" target="_blank"
                   ><button class="experiencia__botao--repo">
                     Repositório
                   </button></a
                 ></span
               >
               <span class="experience__demo"
-                ><a href=""
+                ><a href="https://italofvm.github.io/Codificador-ChallengeOneT5/" target="_blank"
                   ><button class="experiencia__botao--demo">
                     Ver demo
                   </button></a
